...

  Widget _buildMobileLayout(dynamic data, DateTime selectedDate) {
    return CustomScrollView(
      slivers: [
        SliverAppBar(
          floating: true,
          title: const Text('Dashboard'),
          actions: [
            IconButton(
              icon: const Icon(Icons.calendar_month_outlined),
              onPressed: () async {
                 final picked = await showDatePicker(
                  context: context,
...
